fix: Fixing the style for the note (overflowing part).

--- a/src/components/showing-results/styles.module.scss
+++ b/src/components/showing-results/styles.module.scss
@@ -40,4 +40,8 @@
 
 .note {
   color: #526c4b;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
 }
